# voice_ai

./: .coderabbit.yaml  .gitignore  CLAUDE.md  DEPLOYMENT.md  FINAL_DEPLOYMENT_GUIDE.md  README.md  analysis_options.yaml  build.yaml  build_android.sh  pubspec.yaml  run_app.sh  test_app_structure.dart  upload-keystore.jks
.github/: PULL_REQUEST_TEMPLATE.md  coderabbit_instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coderabbit.yml  flutter_ci.yml
android/: keystore_setup.sh
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: colors.xml
assets/models/: .gitkeep
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
lib/: main.dart
lib/constants/: model_configs.dart
lib/models/: audio_state.dart  transcription_record.dart
lib/providers/: audio_provider.dart  history_provider.dart  service_providers.dart
lib/screens/: history_screen.dart  home_screen.dart  model_download_screen.dart  onboarding_screen.dart  recording_screen.dart  settings_screen.dart  transcription_detail_screen.dart
lib/services/: audio_processor.dart  audio_service.dart  ffi_bridge.dart  llm_service_impl.dart  llm_service_stub.dart  llm_service_web.dart  local_llm_engine.dart  model_manager.dart  platform_services.dart  storage_service.dart  (+3 more)
linux/: CMakeLists.txt  my_application.cc
native/: build_native.sh
test/: widget_test.dart
tools/: generate_icons.dart
web/: index.html
(+15 files in other folders)
